deploy/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: riichi-wait-trainer
  labels:
    name: riichi-wait-trainer
